--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ----
 # Site
 
-title: Hydra Template
-url: "https://proud-alligator.cloudvent.net"
+title: PowerUp!
+url: ""
 baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
@@ -10,13 +10,13 @@ disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Product marketing template for Jekyll.
+description: 
 author:
   name:
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name: Hydra Template
+  name: 
   links:
     - https://github.com/CloudCannon/hydra-jekyll-template
 
@@ -24,8 +24,14 @@ social:
 # Build
 
 collections:
-  staff_members:
-    _hide_content: true
+  speakers:
+    output: true
+
+# collections:
+#   staff_members:
+#     _hide_content: true
+
+
 
 paginate: 10
 paginate_path: "/blog/:num/"
