Basic structure of the home page with a bit of styling

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
   link: /scholarships/
   new_window: false
   highlight: false
-- name: Speaker Info
-  link: /speaker-info/
+- name: Speakers
+  link: /speakers/
   new_window: false
   highlight: false
 - name: Program
