--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: PowerUp!
 url:
 baseurl:
-google_analytics_key:
+google_analytics_key: UA-2555375-30
 google_maps_javascript_api_key:
 disqus_shortname:
 
