Possible fix to site not building

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: PowerUp!
-url: www.powerup.org.au
+url: https://powerup.org.au
 baseurl:
 google_analytics_key: UA-2555375-30
 google_maps_javascript_api_key:
