--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@
   new_window: true
   highlight: false
 
-- name: Volunteers
+- name: Volunteer
   link: http://www.surveygizmo.com/s3/3549510/Volunteer-at-PowerUp
   new_window: true
   highlight: false
