--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -29,3 +29,8 @@
   new_window: false
   highlight: false
 
+  - name: Accom
+  link: http://rooms.powerup.org.au/
+  new_window: false
+  highlight: false
+
