--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,3 +28,8 @@
   link: /ticket/
   new_window: false
   highlight: false
+
+  - name: Accom
+  link: http://rooms.powerup.org.au/
+  new_window: false
+  highlight: false
