--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@
   new_window: false
   highlight: false
 
-- name: Accom
+- name: Accomm
   link: http://rooms.powerup.org.au/
   new_window: false
   highlight: false
