changed spelling of programme

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@
   new_window: false
   highlight: false
 
-- name: Program
-  link: /program/
+- name: Programme
+  link: /programme/
   new_window: false
   highlight: false
 
