Add image options

--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,19 @@ defaults:
       type: "posts"
     values:
       layout: "post"
+      _options:
+        content:
+          width: 1500
+          height: 2500
+  -
+    scope:
+      path: ""
+      type: "staff_members"
+    values:
+      _options:
+        image_path:
+          width: 600
+          height: 600
   -
     scope:
       path: ""
