--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -22,15 +22,15 @@
     new_window: true
 - links:
   - name: Facebook
-    link: https://facebook.com
+    link: https://facebook.com/cloudcannon/
     new_window: true
     social_icon: Facebook
   - name: Twitter
-    link: https://twitter.com
+    link: https://twitter.com/cloudcannon/
     social_icon: Twitter
     new_window: true
   - name: YouTube
-    link: https://youtube.com
+    link: https://youtube.com/cloudcannon/
     social_icon: YouTube
     new_window: true
   - name: RSS
