--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@
 title: Hydra Template
 url: "https://proud-alligator.cloudvent.net"
 baseurl:
+copyright: 'MyApp Ltd.'
 google_analytics_key:
 google_maps_javascript_api_key:
 disqus_shortname:
