--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: Maker vs. Virus
 url: "https://www.makervsvirus.org"
 baseurl:
-google_analytics_key:
+google_analytics_key: "UA-161636011-1"
 google_maps_javascript_api_key:
 disqus_shortname:
 
