--- a/_data/hubs.yml
+++ b/_data/hubs.yml
@@ -7,5 +7,15 @@
   city: Kassel
   contact: '<a href="mailto:makervsvirus@hammertimekassel.de">makervsvirus@hammertimekassel.de</a>'
   we_offer:
-    - '<a href="https://www.prusaprinters.org/prints/25857-protective-face-shield-rc1" target="_blank">Prusa Protective Face Shields</a>'
+    - '<a href="https://www.prusaprinters.org/prints/25857-protective-face-shield-rc2" target="_blank">Prusa Protective Face Shields</a>'
+- name: Starke Schwaben
+  # Link is optional
+  link: 
+  country: Germany
+  # State / region is optional
+  state: Baden-Würrtemberg
+  city: Rottweil
+  contact: '<a href="mailto:daniel@dm1989.de">daniel@dm1989.de</a>'
+  we_offer:
+    - '<a href="https://www.prusaprinters.org/prints/25857-protective-face-shield-rc2" target="_blank">Prusa Protective Face Shields</a>'
 # Copy the block above and repeat =)
