--- a/_data/hubs.yml
+++ b/_data/hubs.yml
@@ -13,7 +13,7 @@
   link: 
   country: Germany
   # State / region is optional
-  state: Baden-Würrtemberg
+  state: Baden-Württemberg
   city: Rottweil
   contact: '<a href="mailto:daniel@dm1989.de">daniel@dm1989.de</a>'
   we_offer:
