--- a/_config.yml
+++ b/_config.yml
@@ -110,3 +110,5 @@ _comments:
   highlight: Emphasis the text
   color: The background colour used in the plan name and call to action.
   new_window: Open link in new window
+
+include: netlify.toml
