--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,1 +1,10 @@
-
+en:
+  - name: German (Deutsch)
+    link: /
+    new_window: false
+    highlight: false
+de:
+  - name: English
+    link: /en/
+    new_window: false
+    highlight: false
