--- a/_data/lang.yml
+++ b/_data/lang.yml
@@ -74,7 +74,7 @@ de:
   offer_table_offer: |
     Wir bieten
   offer_table_capacity: |
-    Kapazizäten
+    Kapazitäten
   offer_table_contact: |
     Kontakt
   offer_disclaimer: |
