--- a/_data/lang.yml
+++ b/_data/lang.yml
@@ -2,7 +2,7 @@ en:
   title: |
     Using our Maker skills against Corona
   subtitle: |
-    This website is intended to bring together people and organisations
+    This project is intended to bring together people and organisations
     who need currently hard-to-find protective equipment or spare parts
     with makers and makerspaces who can possibly produce them. Behind this
     project is a small German and English speaking organization team.
@@ -58,7 +58,7 @@ de:
   title: |
     Unsere Maker Skills gegen Corona
   subtitle: |
-    Diese Website soll Menschen und Organisationen zusammenbringen, die aktuell dringend benötigte Schutzausrüstung oder Ersatzteile brauchen,
+    Diese Projekt soll Menschen und Organisationen zusammenbringen, die aktuell dringend benötigte Schutzausrüstung oder Ersatzteile brauchen,
     und Maker und Makerspaces, die diese möglicherweise produzieren können.
     Hinter diesem Projekt steht ein kleines Deutsch und Englisch sprechendes Team.
   hint_non_profit: |
