--- a/_data/lang.yml
+++ b/_data/lang.yml
@@ -58,7 +58,7 @@ de:
   title: |
     Unsere Maker Skills gegen Corona
   subtitle: |
-    Diese Projekt soll Menschen und Organisationen zusammenbringen, die aktuell dringend benötigte Schutzausrüstung oder Ersatzteile brauchen,
+    Dieses Projekt soll Menschen und Organisationen zusammenbringen, die aktuell dringend benötigte Schutzausrüstung oder Ersatzteile brauchen,
     und Maker und Makerspaces, die diese möglicherweise produzieren können.
     Hinter diesem Projekt steht ein kleines Deutsch und Englisch sprechendes Team.
   hint_non_profit: |
