--- a/_data/hubs.yml
+++ b/_data/hubs.yml
@@ -8,7 +8,7 @@ en:
     city: Kassel
     contact: '<a href="mailto:makervsvirus@hammertimekassel.de">makervsvirus@hammertimekassel.de</a>'
     capacity:
-    we_offer:
+    we_offer: Lasercutter, 3D-printing
       - '<a href="https://www.prusaprinters.org/prints/25857-protective-face-shield-rc2" target="_blank">Prusa Protective Face Shields</a>'
   - name: Starke Schwaben
     # Link is optional
@@ -21,7 +21,18 @@ en:
     capacity:
     we_offer:
       - '<a href="https://www.prusaprinters.org/prints/25857-protective-face-shield-rc2" target="_blank">Prusa Protective Face Shields</a>'
-  # Copy the block above and repeat =)
+  - name: Open-DiY Hub
+    # Link is optional
+    link: https://open-diy-projects.com/doityourself-gesichtschutz-faceshield/
+    country: Germany
+    # State / region is optional
+    state: Baden-Württemberg
+    city: Beuren/Linsenhofen
+    contact: '<a href="https://open-diy-projects.com/doityourself-gesichtschutz-faceshield/" target="_blank">Contact form</a>'
+    capacity:
+    we_offer: Collection 3D-parts, Lasercutting. 
+      - 
+# Copy the block above and repeat =)
 de:
   - name: Hammertime Kassel
     # Link is optional
@@ -32,7 +43,7 @@ de:
     city: Kassel
     contact: '<a href="mailto:makervsvirus@hammertimekassel.de">makervsvirus@hammertimekassel.de</a>'
     capacity:
-    we_offer:
+    we_offer: Lasercutter, 3D-Druck
       - '<a href="https://www.prusaprinters.org/prints/25857-protective-face-shield-rc2" target="_blank">Prusa Protective Face Shields</a>'
   - name: Starke Schwaben
     # Link is optional
@@ -45,4 +56,15 @@ de:
     capacity:
     we_offer:
       - '<a href="https://www.prusaprinters.org/prints/25857-protective-face-shield-rc2" target="_blank">Prusa Protective Face Shields</a>'
+  - name: Open-DiY Hub
+    # Link is optional
+    link: https://open-diy-projects.com/doityourself-gesichtschutz-faceshield/
+    country: Deutschland
+    # State / region is optional
+    state: Baden-Württemberg
+    city: Beuren/Linsenhofen
+    contact: '<a href="https://open-diy-projects.com/doityourself-gesichtschutz-faceshield/" target="_blank">Zum Kontaktformular</a>'
+    capacity:
+    we_offer: Sammlung 3D-Druckteile, Lasern, Verpacken und Verteilen an Kreisverbände von Hilfsorganisationen. 
+      - 
   # Copy the block above and repeat =)
