--- a/_data/organisations.yml
+++ b/_data/organisations.yml
@@ -4,4 +4,6 @@
   link: https://www.projectopenair.org/
 - name: print2protect
   link: https://info743967.typeform.com/to/o8l610
+- name: MedPrint
+  link: http://medprint.org/
 # Copy the block above and repeat =)
