--- a/_data/equipments.yml
+++ b/_data/equipments.yml
@@ -4,4 +4,6 @@
   link: https://www.materialise.com/en/hands-free-door-opener
 - name: Open Source Mask
   link: https://www.opensourcemask.com/en/
+- name: Easy shields
+  link: https://www.thingiverse.com/thing:4233193
 # Copy the block above and repeat =)
